Test deploy to github.io

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fernandobrito.github.io/reactnd-project-myreads",
+  "homepage": "https://gwillig.github.io/todo_test",
   "dependencies": {
     "gh-pages": "^1.0.0",
     "prop-types": "^15.5.8",
